[project]
name = "terraform-google-networking"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.1.0",
    "gcloud-aio-auth==5.3.2",
    "gcloud-aio-storage==9.3.0",
    "GitPython==3.1.43",
    "gunicorn==23.0.0",
    "google-api-core==2.21.0",
    "google-auth==2.35.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "tomli===2.2.1",
    "tomli_w==1.2.0",
]

[tool.setuptools]
packages = []

